objects/simpli_lv__List_View_Action_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__Default_Value__c</fullName>
        <description>The default value of the parameter.</description>
        <inlineHelpText>The default value of the parameter.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Display_Order__c</fullName>
        <description>Indicates in which order the parameters should be displayed. The value -1 represents a non-displayed parameter where the default value gets passed through for processing.</description>
        <inlineHelpText>Indicates in which order the parameters should be displayed. The value -1 represents a non-displayed parameter where the default value gets passed through for processing.</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Field_API_Name__c</fullName>
        <description>The API name of the field. This name must be unique within a given action.</description>
        <inlineHelpText>The API name of the field. This name must be unique within a given action.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Label__c</fullName>
        <description>The parameter label that is displayed to the user when retrieving input values.</description>
        <inlineHelpText>The parameter label that is displayed to the user when retrieving input values.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__List_View_Action__c</fullName>
        <description>The list view action that this parameter is associated with.</description>
        <inlineHelpText>The list view action that this parameter is associated with.</inlineHelpText>
        <label>List View Action</label>
        <referenceTo>simpli_lv__List_View_Action__c</referenceTo>
        <relationshipLabel>List View Action Parameters</relationshipLabel>
        <relationshipName>List_View_Action_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Lookup_Type__c</fullName>
        <description>Indicates the type of the object being looked up to if this is a lookup field.</description>
        <label>Lookup Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Placeholder_Text__c</fullName>
        <label>Placeholder Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Type__c</fullName>
        <description>Indicates the type of the parameter being entered. This helps with identifying how the value is to be presented to the user.</description>
        <inlineHelpText>Indicates the type of the parameter being entered. This helps with identifying how the value is to be presented to the user.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>boolean</fullName>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>datetime</fullName>
                </value>
                <value>
                    <fullName>decimal</fullName>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>integer</fullName>
                </value>
                <value>
                    <fullName>lookup</fullName>
                </value>
                <value>
                    <fullName>multipicklist</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>picklist</fullName>
                </value>
                <value>
                    <fullName>rich textarea</fullName>
                </value>
                <value>
                    <fullName>string</fullName>
                </value>
                <value>
                    <fullName>textarea</fullName>
                </value>
                <value>
                    <fullName>time</fullName>
                </value>
                <value>
                    <fullName>url</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>List View Action Parameter</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Field_API_Name__c</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__List_View_Action__c</columns>
        <columns>simpli_lv__Type__c</columns>
        <columns>simpli_lv__Display_Order__c</columns>
        <columns>simpli_lv__Default_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LVAP-{0}</displayFormat>
        <label>List View Action Parameter AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Action Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>